--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -9,9 +9,31 @@
 </head>
 <body>
     <div class="caixa width-and-height" style="background: #036b52">A</div>
-        <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
-            <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
-                 <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+    <div class="caixa width-and-height padding" style="background: #41197f;">B</div>
+    <div class="caixa width-and-height padding margin" style="background: #444955">C</div>
+    <div class="caixa width-and-height padding margin border" style="background: #3898EC">D</div>
+
+    <br>
+    <hr>
+    <br>
+
+    
+    <h1 id="mari">Exercícios de fixação 3.3</h1>
+    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
+    <img src="https://bit.ly/3arGfMc" alt="gomba" class="goomba" />
+   
+   
+   
+    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    <img src="https://bit.ly/2MV2bY0" alt="bowser" class="bowser" />
+    <p class="word">Goomba, do something!</p>
+
+    <!-- Exercícios:
+    1- Posicione o Mário acima do Goomba.
+    2- Posicione a tag p para que fique dentro do balão de fala.
+    3- Posicione o balão para que se torne uma fala de Bowser.
+    4- Posicione os elementos para que tenham alguma distância entre si.
+  -->
 
 
 </body>
