exercio das divs

--- a/bloco_3/dia_3/index.html
+++ b/bloco_3/dia_3/index.html
@@ -80,19 +80,24 @@
 
 <h1>Paleta de Cores</h1>
 <p>Vamos criar uma paleta de cores com as divs abaixo:</p>
-<div>
-  <h3>Cor primária</h3>
+
+<div id="corprimaria">
+  <h3> Cor primária </h3>
 </div>
-<div>
-  <h3>Cor Secundária</h3>
+
+<div id="corsecundaria">
+  <h3> Cor Secundária </h3>
 </div>
-<div>
-  <h3>Cor Complementar</h3>
+
+<div id="corcomplementar">
+  <h3> Cor Complementar </h3>
 </div>
-<div>
-  <h3>Cor Escura</h3>
+
+<div id="corescura">
+  <h3> Cor Escura </h3>
 </div>
-<div>
+
+<div id="corclara">
   <h3>Cor Clara</h3>
 </div>
 <!-- EXERCÍCIOS
@@ -105,6 +110,11 @@
   5. Deixe as tags ímpares <h3> com o texto em itálico.
 
 -->
+
+<br>
+<hr>
+<br>
+
 <h1><em>Combinações e Classes Descendentes</em></h1>
     <br />
     <h3>Top 5 frases memoráveis:</h3>
