--- a/bloco_3/dia_3.2/index.html
+++ b/bloco_3/dia_3.2/index.html
@@ -94,6 +94,7 @@
   Dica 1: Utilize o seletor :hover para controlar o passar do mouse.
   Dica 2: Sugestão de cores padrão. StackOverflow (laranja), W3Schools (verde), MDN (preta), DevDocs (amarela), Trybe (verde).
 
+  header , nav , aside , article , section , footer e img ;
 */
 
 </body>
