blocos do exercises 6

--- a/Bloco-05_javaScript-Dom-seletores/01-javaScriot-Dom-Seletores/index.html
+++ b/Bloco-05_javaScript-Dom-seletores/01-javaScriot-Dom-Seletores/index.html
@@ -7,6 +7,8 @@
     <p id="paragraph">Dê uma cor para este parágrafo!</p>
     <h4 id="subtitle">Subtítulo</h4>
     <p id="second-paragraph">Segundo parágrafo!</p>
+    <div>piloto um</div>
+    <div>piloto dois  </div>
 
     <script>
       var paragraph = document.getElementById("paragraph").innerText = "CASAMENTO DE MINTIRINHA"
@@ -15,6 +17,10 @@
       var pageTitle = document.getElementById("page-title").innerText= "meus filmes"
       var pageTitle = document.getElementById("page-title").style.color = "black";
       var pageTitle = document.getElementById("page-title").style.background = "orange";
+      var div = document.getElementsByTagName("div")[0].style.background = "orange";
+      var div = document.getElementsByTagName("div")[1].style.background = "green";
+      var div = document.getElementsByTagName("div")[1].style.color = "white";
+
     </script>
   </body>
 </html>
