--- a/16 - bloco Gerenciamento de de estado com Redux/01 - intrudução ao redux - o estado global da aplicação/o que vamos aprender/reduceHTML/index2.html
+++ b/16 - bloco Gerenciamento de de estado com Redux/01 - intrudução ao redux - o estado global da aplicação/o que vamos aprender/reduceHTML/index2.html
@@ -242,6 +242,12 @@ const store = Redux.createStore(immutableReducer);
     }
   }
 
+  const wakUp = () => ({
+    type: 'OLINE'
+  })
+
+  const store = Redux.createStore(imultableReducer);
+
 
 
   </script>
