--- a/Dojo/via cep/index.html
+++ b/Dojo/via cep/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="row">
         <div class="inputbox">
-            <input type="text" id="cep"  required  placeholder="digite o cep">
+            <input type="text" id="cep"  required  placeholder="ex: 00000-000">
             <label for="cep">CEP</label>
         </div>
         <div class="inputbox">
