--- a/30 -  Sockets/03 - Sockets - Sockets.io/index.html
+++ b/30 -  Sockets/03 - Sockets - Sockets.io/index.html
@@ -4,18 +4,10 @@
     <title>Socket.IO - trybe</title>
   </head>
   <body>
-    <h1e>Socket.IO - trybe</h1>
     <button id='pingButton'>PING</button>
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io();
-      const button = document.querySelector('#pingButton');
 
-      button.addEventListener('click', (e) => {
-        socket.emit('ping');
-        return false;
-      });
-    </script>
+    <ul id='messages'></ul>
   </body>
-
+  <script src="/socket.io/socket.io.js"></script>
+  <script src='./js/ping.js'></script>
 </html>
